fix accessibility contrast

--- a/packages/mgt-components/src/components/mgt-picker/mgt-picker.scss
+++ b/packages/mgt-components/src/components/mgt-picker/mgt-picker.scss
@@ -11,11 +11,23 @@
 
 :host {
   --max-height: var(--picker-max-height, 380px);
-  
+
   font-family: $font-family;
 
- .picker {
+  .picker {
     background-color: $picker-background-color;
+
+    fluent-combobox {
+      &::part(control) {
+        .selected-value {
+          color: $picker-text-color;
+        }
+
+        &:hover {
+          --secondary-text-color: var(--secondary-text-hover-color);
+        }
+      }
+    }
   }
 }
 
